# best-pizza-services

./: .dockerignore  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  best-pizza-services.code-workspace  compose.yaml  justfile  pyproject.toml  requirements.txt
apps/pizza_api/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  release_scope.env
apps/pizza_api/src/pizza_api/: __init__.py  constants.py  main.py
apps/pizza_api/src/pizza_api/application/: __init__.py  logging.py  results.py
apps/pizza_api/src/pizza_api/application/use_cases/: __init__.py  add_category.py  parse_editions.py  parse_webpages.py  process_pending.py  scrape_editions.py  scrape_webpages.py
apps/pizza_api/src/pizza_api/dependencies/: __init__.py  categories.py  dep_types.py  engine.py  maintenance.py  pizzerias.py  repositories.py  security.py
apps/pizza_api/src/pizza_api/routers/: __init__.py  categories.py  health.py  maintenance.py  pizzerias.py  stats.py
apps/pizza_api/src/pizza_api/schemas/: __init__.py  requests.py  responses.py
apps/pizza_api/src/pizza_api/settings/: __init__.py  app.py  auth.py  engine_pool.py
apps/pizza_api/tests/: conftest.py
apps/pizza_api/tests/routers/: __init__.py
apps/pizza_app/: CHANGELOG.md  Dockerfile  README.md  debug.env  pyproject.toml  release_scope.env  test_pizza_divers_data_set_two.db  test_rankings_parsing.db
apps/pizza_app/src/pizza_app/: app.py  constants.py  dataclasses.py  enums.py  filters.py  list.py  map.py  utils.py
apps/pizza_app/src/pizza_app/infrastructure/: __init__.py  adapters.py
apps/pizza_app/src/pizza_app/models/: pizzerias.py  ranking_entries.py  webpages.py
apps/pizza_app/src/pizza_app/repositories/: __init__.py  pizza_platform_api.py  pizza_platform_database.py
apps/pizza_app/src/pizza_app/schemas/: __init__.py  award.py  base.py  location.py  pizzeria.py  ranking.py
apps/pizza_app/src/pizza_app/settings/: __init__.py  application.py  base_database.py  pizza_api.py  pizza_database.py
apps/pizza_app/src/pizza_app/views/: __init__.py  filters.py  list.py  map.py
apps/pizza_app/tests/: __init__.py  vars.env
apps/pizza_app/tests/pizza_app/: __init__.py  conftest.py  test_adapter.py  test_app.py
apps/pizza_worker/: Dockerfile  README.md  pyproject.toml
pizza_data_scraper/: .gitignore  pyproject.toml  scratch.py
pizza_data_scraper/alembic/: env.py
pizza_data_scraper/alembic/versions/: c8f00ce28893_initial_revision_01.py
pizza_data_scraper/src/pizza_data_scraper/: constants.py  enums.py  logic.py  patterns.py  repositories.py  utils.py
pizza_data_scraper/src/pizza_data_scraper/models/: __init__.py  base.py  categories.py  endpoints.py  pizzerias.py  ranking_editions.py  ranking_entries.py  webpages.py
pizza_data_scraper/src/pizza_data_scraper/models/database/: locations.py  pizzerias.py  ranking_editions.py  ranking_entries.py
pizza_data_scraper/src/pizza_data_scraper/models/dataclass/: __init__.py  coordinates.py
pizza_data_scraper/src/pizza_data_scraper/models/parser/: patterns.py
pizza_data_scraper/src/pizza_data_scraper/schemas/: __init__.py  base.py  category.py  endpoints.py  locations.py  pizzeria.py  ranked_edition.py
pizza_data_scraper/src/pizza_data_scraper/settings/: __init__.py  base_database.py  database.py  maintenance_database.py  pizza_database.py
pizza_data_scraper/src/pizza_data_scraper/types/: __init__.py
pizza_data_scraper/tests/: __init__.py
pizza_data_scraper/tests/pizza_data_scraper/: test_settings.py
services/geolocation/: CHANGELOG.md  pyproject.toml
services/geolocation/src/geolocation/: __init__.py  constants.py  geo_service.py  logic.py  models.py  protocol.py
services/geolocation/src/geolocation/application/: __init__.py
services/geolocation/src/geolocation/application/ports/: __init__.py  geolocation.py
services/geolocation/tests/: __init__.py
services/geolocation/tests/geolocation/: test_geolocation_service.py
services/pizza_data_collector/: CHANGELOG.md  pyproject.toml
services/pizza_data_collector/src/pizza_data_collector/: __init__.py  constants.py  exceptions.py  logic.py  settings.py  utils.py
services/pizza_data_collector/src/pizza_data_collector/application/: __init__.py
services/pizza_data_collector/src/pizza_data_collector/models/: __init__.py  patterns.py
services/pizza_data_collector/src/pizza_data_collector/parsers/: __init__.py  edition_parser.py  pizzeria_parser.py
services/pizza_data_collector/src/pizza_data_collector/scrapers/: __init__.py  edition_scraper.py  http_client.py  scraper.py
services/pizza_data_collector/tests/: __init__.py  conftest.py
services/pizza_data_collector/tests/pizza_data_management/: test_settings.py
services/pizza_data_storage/: .gitignore  CHANGELOG.md  pyproject.toml
services/pizza_data_storage/alembic/: env.py
services/pizza_data_storage/alembic/versions/: 2877bb3dfb26_initial_revision_01.py  4a4c6103ebb6_initial_revision_01.py  4e0e80006aea_updated_column_fields_04.py  5201ba02694e_initial_revision_01.py  852a352efb90_added_parsed_at_columns_03.py  92ce288836b7_added_awards_table_02.py  9e3212935023_initial_revision_01.py
services/pizza_data_storage/src/pizza_data_storage/: __init__.py  constants.py  enums.py  logic.py  utils.py
services/pizza_data_storage/src/pizza_data_storage/application/: __init__.py
services/pizza_data_storage/src/pizza_data_storage/models/: __init__.py  awards.py  categories.py  editions.py  locations.py  pizzerias.py  rankings.py  webpages.py
services/pizza_data_storage/src/pizza_data_storage/repositories/: __init__.py  base_storage.py  html_storage.py  pizzeria.py  pizzeria_db.py  pizzerias.py  ranking.py  ranking_db.py
services/pizza_data_storage/src/pizza_data_storage/settings/: __init__.py  config.py  maintenance_database.py  storage.py
services/pizza_data_storage/src/pizza_data_storage/types/: __init__.py  database.py
services/pizza_data_storage/tests/: __init__.py  conftest.py  vars.env
services/pizza_data_storage/tests/pizza_data_storage/: __init__.py  test_settings.py
(+145 files in other folders)
