[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pizza_data_scraper"
version = "0.1.0"
description = "A webscraper to get html data about the best pizza's in the world"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandera>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "yarl>=1.22.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pizza_data_scraper"]
