[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pizza_api"
version = "0.1.0"
description = "The pizza platform API"
authors = [{ name = "DerpVis Codes", email = "dervis.vanleersum@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pandera>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pizza-data-collector",
    "pizza-data-storage",
    "geolocation",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pizza_api"]

[tool.uv.sources]
pizza-data-collector = { workspace = true }
pizza-data-storage = { workspace = true }
geolocation = { workspace = true }

