[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pizza-api"
version = "0.4.0"
description = "The pizza platform API for managing and scraping data."
authors = [{ name = "DerpVis Codes", email = "dervis.vanleersum@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pizza-data-collector",
    "pizza-data-storage",
    "pizza-platform-shared",
    "geolocation",
    "fastapi[standard]>=0.136.1",
    "sqlalchemy>=2.0.46",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pizza_api"]

[tool.uv.sources]
pizza-data-collector = { workspace = true }
pizza-data-storage = { workspace = true }
pizza-platform-shared = { workspace = true }
geolocation = { workspace = true }

[tool.deptry]
ignore_notebooks = true
per_rule_ignores = { DEP002 = [
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist"
], DEP003 = [
    "pizza_api",
    "pizza_platform_shared",
    "pizza_data_storage",
    "pizza_data_collector",
    "geolocation",
] }

[tool.bumpversion]
current_version = "0.4.0"
commit          = true
tag             = true
tag_name        = "pizza-api/v{new_version}"
tag_message     = "Release pizza-api {new_version}"
message         = "chore(pizza-api): bump {current_version} → {new_version}"
commit_args     = "--no-verify"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search   = 'version = "{current_version}"'
replace  = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search   = "[Unreleased]"
replace  = "## [{new_version}] - {now:%Y-%m-%d}"
