[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pizza_app"
version = "0.1.0"
description = "A Streamlit pizza platform data viewer"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "folium>=0.20.0",
    "pandas>=2.3.3",
    "pandera>=0.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.54.0",
    "streamlit-folium>=0.26.1",
    "yarl>=1.22.0",
    "pizza-platform-shared",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
pizza-app = "pizza_app.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pizza_app"]

[tool.uv.sources]
pizza-platform-shared = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
