[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pizza-app"
version = "0.1.1"
description = "A Streamlit pizza platform data viewer"
authors = [{ name = "DerpVis Codes", email = "dervis.vanleersum@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "folium>=0.20.0",
    "pandas>=2.3.3",
    "pandera>=0.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "streamlit>=1.55.0",
    "streamlit-folium>=0.26.1",
    "pizza-platform-shared",
    "requests>=2.32.5",
]

[project.scripts]
pizza-app = "pizza_app.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pizza_app"]

[tool.uv.sources]
pizza-platform-shared = { workspace = true }

[tool.deptry]
ignore_notebooks = true
per_rule_ignores = { DEP002 = [
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist"
], DEP003 = [
    "pizza_app",
    "pizza_platform_shared",
] }

[tool.bumpversion]
current_version = "0.1.1"
commit          = true
tag             = true
tag_name        = "pizza-app/v{new_version}"
tag_message     = "Release pizza-app {new_version}"
message         = "chore(pizza-app): bump {current_version} → {new_version}"
commit_args     = "--no-verify"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search   = 'version = "{current_version}"'
replace  = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search   = "[Unreleased]"
replace  = "## [{new_version}] - {now:%Y-%m-%d}"
