[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geolocation"
version = "0.1.0"
description = "A reverse geolocation service."
authors = [{ name = "DerpVis Codes", email = "dervis.vanleersum@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.12.5",
    "yarl>=1.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/geolocation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
