[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geolocation"
version = "0.1.0"
description = "A reverse geolocation service."
authors = [{ name = "DerpVis Codes", email = "dervis.vanleersum@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.12.5",
    "yarl>=1.22.0",
    "pizza-platform-shared",
]

[tool.hatch.build.targets.wheel]
packages = ["src/geolocation"]
include = ["py.typed"]

[tool.uv.sources]
pizza-platform-shared = { workspace = true }

[tool.deptry]
ignore_notebooks = true
per_rule_ignores = { DEP002 = ["pytest-asyncio", "pytest-cov", "pytest-xdist"], DEP003 = ["geolocation", "pizza_platform_shared"] }
