[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geolocation"
version = "0.0.0"
description = "A reverse geolocation service."
authors = [{ name = "DerpVis Codes", email = "dervis.vanleersum@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.12.5",
    "yarl>=1.22.0",
    "pizza-platform-shared",
]

[tool.hatch.build.targets.wheel]
packages = ["src/geolocation"]
include = ["py.typed"]

[tool.uv.sources]
pizza-platform-shared = { workspace = true }

[tool.deptry]
ignore_notebooks = true
per_rule_ignores = { DEP002 = ["pytest-asyncio", "pytest-cov", "pytest-xdist"], DEP003 = ["geolocation", "pizza_platform_shared"] }

[tool.bumpversion]
current_version = "0.0.0"
commit          = true
tag             = true
tag_name        = "geolocation/v{new_version}"
tag_message     = "Release geolocation {new_version}"
message         = "chore(geolocation): bump {current_version} → {new_version}"
commit_args     = "--no-verify"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search   = 'version = "{current_version}"'
replace  = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search   = "[Unreleased]"
replace  = "## [{new_version}] - {now:%Y-%m-%d}"
