[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pizza_data_collector"
version = "0.1.0"
description = "A webscraper and data parser for the pizza platform"
authors = [{ name = "DerpVis Codes", email = "dervis.vanleersum@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandera>=0.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "yarl>=1.22.0",
    "pizza-platform-shared",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pizza_data_collector"]

[tool.uv.sources]
pizza-platform-shared = { workspace = true }
