[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pizza-data-collector"
version = "0.1.0"
description = "A webscraper and data parser for the pizza platform"
authors = [{ name = "DerpVis Codes", email = "dervis.vanleersum@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "beautifulsoup4>=4.14.3",
    "pydantic>=2.12.5",
    "pizza-platform-shared",
    "tenacity>=9.1.4",
    "pydantic-settings>=2.13.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pizza_data_collector"]
include = ["py.typed"]

[tool.uv.sources]
pizza-platform-shared = { workspace = true }

[tool.deptry]
ignore_notebooks = true
per_rule_ignores = { DEP002 = [
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist"
], DEP003 = [
    "pizza_data_collector",
    "pizza_platform_shared",
] }

[tool.bumpversion]
current_version = "0.1.0"
commit          = true
tag             = true
tag_name        = "pizza-data-collector/v{new_version}"
tag_message     = "Release pizza-data-collector {new_version}"
message         = "chore(pizza-data-collector): bump {current_version} → {new_version}"
commit_args     = "--no-verify"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search   = 'version = "{current_version}"'
replace  = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search   = "[Unreleased]"
replace  = "## [{new_version}] - {now:%Y-%m-%d}"
