[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pizza-data-storage"
version = "0.1.0"
description = "The storage service for db maintenance"
authors = [{ name = "DerpVis Codes", email = "dervis.vanleersum@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "yarl>=1.22.0",
    "pizza-platform-shared",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pizza_data_storage"]
include = ["py.typed"]

[tool.uv.sources]
pizza-platform-shared = { workspace = true }

[tool.deptry]
ignore_notebooks = true
per_rule_ignores = { DEP002 = [
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist"
], DEP003 = [
    "pizza_data_storage",
    "pizza_platform_shared",
    "botocore",
] }

[tool.alembic]
script_location  = "services/pizza_data_storage/alembic"
prepend_sys_path = "."
path_separator   = "os"

[tool.alembic.loggers]
keys = "root,sqlalchemy,alembic"

[tool.alembic.handlers]
keys = "console"

[tool.alembic.formatters]
keys = "generic"

[tool.alembic.logger_root]
level    = "WARNING"
handlers = "console"
qualname = ""

[tool.alembic.logger_sqlalchemy]
level    = "WARNING"
handlers = ""
qualname = "sqlalchemy.engine"

[tool.alembic.logger_alembic]
level    = "INFO"
handlers = ""
qualname = "alembic"

[tool.alembic.handler_console]
class     = "StreamHandler"
args      = "(sys.stderr,)"
level     = "NOTSET"
formatter = "generic"

[tool.alembic.formatter_generic]
format  = "%(levelname)-5.5s [%(name)s] %(message)s"
datefmt = "%H:%M:%S"
