[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pizza-data-storage"
version = "0.0.0"
description = "The storage service for db maintenance"
authors = [{ name = "DerpVis Codes", email = "dervis.vanleersum@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "yarl>=1.22.0",
    "pizza-platform-shared",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pizza_data_storage"]
include = ["py.typed"]

[tool.uv.sources]
pizza-platform-shared = { workspace = true }

[tool.deptry]
ignore_notebooks = true
per_rule_ignores = { DEP002 = [
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist"
], DEP003 = [
    "pizza_data_storage",
    "pizza_platform_shared",
    "botocore",
] }

[tool.bumpversion]
current_version = "0.0.0"
commit          = true
tag             = true
tag_name        = "pizza-data-storage/v{new_version}"
tag_message     = "Release pizza-data-storage {new_version}"
message         = "chore(pizza-data-storage): bump {current_version} → {new_version}"
commit_args     = "--no-verify"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search   = 'version = "{current_version}"'
replace  = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search   = "[Unreleased]"
replace  = "## [{new_version}] - {now:%Y-%m-%d}"
